# cpsml

./: .gitignore  CHANGELOG.md  README.md  runtests.sh  setup.cfg  setup.py
cpsml/: __init__.py  generator.py  language.py  utils.py
cpsml/cli/: cli.py
cpsml/grammar/: api.pu  api.tx  communication.pu  communication.tx  datatype.tx  entity.tx  environment.pu  environment.tx  eservice.pu  eservice.tx  functionality.tx  geometry.pu  geometry.tx  msg.tx  networking.pu  networking.tx  resource.tx  service.tx  synthesis.tx  thing.pu  thing.tx
cpsml/lang/: __init__.py  api.py  communication.py  datatype.py  entity.py  environment.py  eservice.py  functionality.py  networking.py  resource.py  synthesis.py  thing.py  utils.py
cpsml/mm_classes/: api.py  resource.py
cpsml/templates/: api_model.jinja  entity_model.jinja  eservice.jinja  r2api.jinja  sensor.tpl  smauto.jinja  t2r.jinja  vthing.jinja
cpsml/transformations/: api2vcode.py  openapi_2_eservices.py  resources2api.py  system2apis.py  thing2api.py  thing2entity.py  thing2resources.py  thing2vcode.py
cpsml/transformations/m2m/: __init__.py  thing_to_smauto.py
examples/: example.sensor  example.thing  sensor_dm.idl
examples/devices/: my_pi.thing
examples/example_1/: sensor_dm.idl  sensors.thing
examples/oas_2_esvc/: eservices.esvc  spec.yml
examples/robots/: MySimpleRobot.ent  MySimpleRobot.smauto  myrobot.thing  myrobot_2.thing  myrobot_simple.thing
models/: README.md
models/api/: myapi.api
models/communication/: my_brokers.comm
models/datatypes/: actuators.dtype  geometry.dtype  sensor_dm.idl  sensors.dtype
models/entities/: myEntities.ent
models/environment/: myhome.env  obstacles.env
models/eservices/: eservices.esvc
models/functionality/: manosFunct_A.dfunc  myUGVnav.dfunc  myUGVnav.dfunc.todo
models/networks/: csal_wifi.net
models/resources/: myapi.api  myrobot.resource  myrobot_resources.resource
models/synthesis/: MyPi.api  mysystem.system
models/things/: .gitignore  MyRobot.api  MyRobot.resource  actuators.thing  base_motor_ctrl.thing  button_a.thing  camera_rgb.thing  composite_simple.thing  cpantilt.thing  dfrobot_motor_ctrl.thing  dynamixel_servo_ctrl.thing  generic_led_array.thing  lidar_urg04.thing  my_pi.thing  myrobot.thing  pantilt.thing  pantilt_camera_composite.thing  sensors.thing  sonar_hcsr04.thing  tekrobot.thing  tof_vl53l0x.thing  usb_speaker.thing
thing_dsl/: __init__.py  generator.py  my_device.thing  thing_dsl.tx  utils.py
thing_dsl/templates/: sensor.tpl
thingml/: __init__.py  generator.py  language.py  utils.py
thingml/cli/: cli.py
thingml/grammar/: api.tx  communication.tx  datatype.tx  msg.tx  networking.tx  rcm.tx  resource.tx  robot.tx  synthesis.tx  thing.tx  thingml.tx
thingml/lib/: datatype.py
thingml/transformations/: resources2api.py  thing2resources.py
