[metadata]
name = cpsml
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = DSL for model-driven development of Cyber-Physical Systems
keywords = textX
url =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
include_package_data = True
package_dir =
    cpsml = cpsml

install_requires =
    textX
    jinja2
    click
    openapi3-parser
    pydantic>=2.0.0

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    cpsml = *.tx

[options.entry_points]
textx_languages =
    cpsml.thing = cpsml:things_language
    cpsml.resource = cpsml:resources_language
    cpsml.networking = cpsml:networking_language
    cpsml.communication = cpsml:communication_language
    cpsml.datatype = cpsml:dtypes_language
    cpsml.api = cpsml:api_language
    cpsml.synthesis = cpsml:synthesis_language
    cpsml.eservice = cpsml:eservice_language
    cpsml.environment = cpsml:environment_language

textx_generators =
    thing_commlib = cpsml.generator:generator_commlib

console_scripts =
    cpsml = cpsml.cli.cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90